# OpenCV3-C-

./: README
CH2/ex1/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
CH2/ex2/: CMakeLists.txt
CH2/fileRead1/: main.cpp
CH2/fileWrite1/: CMakeLists.txt  main.cpp
CH2/im1/: main.cpp
CH2/vid1/: main.cpp
CMake_test/: CMakeLists.txt
Examples/: README.txt  code_samples.txt
Examples/4244OS_01_Code/flipImage/: flipImage.cpp  flipImage.pro
Examples/4244OS_01_Code/recLiveVid/: recLiveVid.cpp  recLiveVid.pro
Examples/4244OS_01_Code/showVideo/: showVideo.cpp  showVideo.pro
Examples/4244OS_02_Code/drawRs/: drawR.cpp  drawR.pro
Examples/4244OS_02_Code/drawThings/: drawThings.cpp  drawThings.pro
Examples/4244OS_02_Code/propertyDlgButtons/: propertyDlgButtons.cpp  propertyDlgButtons.pro
Examples/4244OS_02_Code/tbarContrast/: tbContrast.cpp  tbContrast.pro
Examples/4244OS_02_Code/tbarContrastCallB/: tbContrastCallB.cpp  tbContrastCallB.pro
Examples/4244OS_03_Code/BrightnessContrast/: BrightnessContrast.pro
Examples/4244OS_03_Code/EqualizeHist_Demo/: EqualizeHist_Demo.pro
Examples/4244OS_03_Code/Filter_Retina/: Filter_Retina.pro
Examples/4244OS_03_Code/Geometrical_Transforms/: Geometrical_Transforms.pro
Examples/4244OS_03_Code/ImgHisto/: ImgHisto.pro
Examples/4244OS_03_Code/LinearBlend/: LinearBlend.pro
Examples/4244OS_03_Code/color_channels/: color_channels.pro
Examples/4244OS_03_Code/histMatching/: histMatching.cpp  histMatching.pro
Examples/4244OS_04_Code/connectedComponents/: connectedComponents.pro
(+57 files in other folders)
